# enqueteur

./: .gitignore  .output.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  scratch.py
alembic/: env.py
architecture_snapshots/: ARCH_SUMMARY_SNAPSHOT_2025-11-19_BEFORE_MOVING_BOXES.json  LOOPFORGE_LAYERING.md
backend/: __init__.py  runtime_messages.py
docs/: ARCHITECTURE_EVOLUTION_PLAN.md  BELIEF_ATTRIBUTION.md  BELIEF_ATTRIBUTION.md   CINEMATIC_DEBUGGER.md  COGNITIVE_ARCHITECTURE_SPEC.md  DIAGNOSTIC_PHILOSOPHY.md  EMOTIONAL_ARC_ENGINE.md  HOW_IS_LOOPFORGE_DEVELOPED.md  HUMAN_AGENT_INTERACTION.md  JUNIE_PLAYBOOK.md  LLM_ARCHITECT_FIELD_MANUAL.md  LOOPFORGE_OUTPUT_SCHEMAS.md  LOOPFORGE_WHITEPAPER_DRAFT.md  NOTES_FROM_PREVIOUS_ARCHITECTS.md  SIMX_VISION.md  SUPERVISOR_ACTIVITY.md  THE_PUPPETTEER_DOCTRINE.md  THE_PUPPETTEER_README.md  dev_reporting.md  episode_identity_investigation.md  episode_identity_sprint2_report.md  kvp_export_layout_v0_1.md  sprint14_scope_lock.md
loopforge/: __init__.py  agents.py  analysis_api.py  arc_cohesion.py  attribution.py  attribution_drift.py  beliefs.py  characters.py  config.py  daily_logs.py  day_runner.py  db.py  emotion_model.py  emotions.py  environment.py  episode_recaps.py  explainer.py  explainer_context.py  ids.py  llm_client.py  llm_lens.py  llm_stub.py  logging_utils.py  long_memory.py  memory_line.py  memory_store.py  metrics.py  micro_incidents.py  models.py  narrative.py  narrative_fusion.py  narrative_reflection.py  narrative_viewer.py  perception_shaping.py  pressure_notes.py  psych_board.py  reflection.py  reporting.py  run_registry.py  simulation.py  (+9 more)
loopforge_meta/: llm_client.py
scripts/: CHEATSHEET.md  architects.py  bump_room_numbers.py  generate_small_run_fixture.py  reset_local_state.py  run_sim4_kvp_demo.py  run_simulation.py
sim/: __init__.py  engine.py  io.py  policy.py  runner.py  specs.py  state.py
tests/: conftest.py  test_action_log_entry.py  test_analysis_api.py  test_analysis_by_id.py  test_analysis_with_ids.py  test_arc_cohesion.py  test_attribution_drift.py  test_attribution_supervisor_influence.py  test_belief_attributions.py  test_beliefs.py  test_cli_view_day_latest.py  test_cli_view_episode_identity.py  test_cli_view_episode_latest.py  (+79 more)
(+1018 files in other folders)
