[project]
name = "enqueteur"
version = "0.2.0"
description = "Deterministic living-world runtime and webview foundation for Enqueteur"
authors = [
  { name = "Enqueteur Team" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["backend/sim4/tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools]
packages = []
